# ElyraSQL

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  benchmark_analyse.md  mkdocs.yml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  differential.yml  docker.yml  docs.yml  fuzz.yml  release.yml  soak.yml
bench/: benchmark.py  compare.py  olap.py
crates/elyra-cli/: Cargo.toml
crates/elyra-cli/src/: main.rs
crates/elyra-cli/tests/: durability.rs  soak.rs
crates/elyra-core/: Cargo.toml
crates/elyra-core/src/: datetime.rs  error.rs  json.rs  lib.rs  types.rs  users.rs  value.rs
crates/elyra-engine/: Cargo.toml
crates/elyra-engine/src/: aggregate.rs  aggspill.rs  aiembed.rs  catalog.rs  colcache.rs  cpred.rs  eval.rs  exec.rs  ft.rs  index.rs  keyenc.rs  lib.rs  lockmgr.rs  predicate.rs  proc.rs  rowdec.rs  sessfn.rs  session.rs  sort.rs  stream.rs  txn.rs  users.rs  vindex.rs  zonemap.rs
crates/elyra-olap/: Cargo.toml
crates/elyra-olap/src/: lib.rs
crates/elyra-server/: Cargo.toml
crates/elyra-server/src/: auth.rs  cluster.rs  lib.rs  observ.rs  prepared.rs  raftlog.rs  repl.rs
crates/elyra-server/tests/: wire.rs
crates/elyra-server/tests/common/: mod.rs
crates/elyra-storage/: Cargo.toml
crates/elyra-storage/src/: binlog.rs  db.rs  lib.rs
crates/elyra-vector/: Cargo.toml
crates/elyra-vector/src/: hnsw.rs  lib.rs
crates/elyra-wire/: Cargo.toml  NOTICE
crates/elyra-wire/src/: lib.rs  packet_reader.rs
crates/elyra-wire/src/value/: encode.rs
docs/: architecture.md  backup.md  configuration.md  contributing.md  deployment.md  frameworks.md  getting-started.md  index.md  installation.md  limitations.md  mysql-compatibility.md  observability.md  olap.md  performance.md  replication.md  security.md
docs/sql/: aggregation.md  data-types.md  ddl.md  dml.md  functions.md  overview.md  queries.md  transactions.md  vector-search.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: preprocess.rs
packaging/: deploy.sh  elyrasql.service
tests/compat/: README.md
tests/compat/differential/: mysql_diff.py
tests/compat/laravel/: composer.json  eloquent_test.php
tests/compat/php/: native_prepare.php
tests/compat/python/: pymysql_smoke.py
