[package]
name = "elyra-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ElyraSQL core types, errors and catalog primitives"

[dependencies]
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
sha1 = "0.10"

[dev-dependencies]
proptest = "1"
