[package]
name = "elyra-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ElyraSQL query engine: parse, plan and execute SQL"

[dependencies]
elyra-core.workspace = true
elyra-storage.workspace = true
elyra-vector.workspace = true
elyra-olap.workspace = true
sqlparser.workspace = true
regex.workspace = true
tokio = { workspace = true }
bincode.workspace = true
serde.workspace = true
tracing.workspace = true
