[package]
name = "elyra-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ElyraSQL query engine: parse, plan and execute SQL"

[dependencies]
elyra-core.workspace = true
elyra-storage.workspace = true
elyra-vector.workspace = true
elyra-olap.workspace = true
sqlparser.workspace = true
regex.workspace = true
# Snowball stemmers (English + many other languages) for full-text search.
rust-stemmers = "1.2"
# HTTP client for ai_embed() (OpenAI-compatible embeddings). rustls+ring keeps
# the static musl builds working (no aws-lc-rs).
ureq = { version = "2", features = ["json"] }
serde_json = "1"
tokio = { workspace = true }
bincode.workspace = true
serde.workspace = true
tracing.workspace = true
