[package]
name = "elyra-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ElyraSQL query engine: parse, plan and execute SQL"

[dependencies]
elyra-core.workspace = true
elyra-storage.workspace = true
elyra-vector.workspace = true
elyra-olap.workspace = true
sqlparser.workspace = true
regex.workspace = true
# Snowball stemmers (English + many other languages) for full-text search.
rust-stemmers = "1.2"
# Hashing for MD5()/SHA1()/SHA2() SQL functions (RustCrypto, pure Rust, musl-safe).
md-5 = "0.11"
sha1 = "0.10"
sha2 = "0.11"
# HTTP client for ai_embed() (OpenAI-compatible embeddings). rustls+ring keeps
# the static musl builds working (no aws-lc-rs).
ureq = { version = "3", features = ["json"] }
serde_json = "1"
tokio = { workspace = true }
bincode.workspace = true
serde.workspace = true
tracing.workspace = true
