[package]
name = "elyra-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ElyraSQL MySQL-compatible wire protocol server"

[dependencies]
elyra-core.workspace = true
elyra-engine.workspace = true
elyra-storage.workspace = true
opensrv-mysql.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
sha1 = "0.10"
getrandom = "0.2"
futures-util = "0.3"
serde.workspace = true
bincode.workspace = true
tokio-rustls = "0.25"
rustls-pemfile = "2"
rustls-pki-types = "1"
