[package]
name = "elyra-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ElyraSQL MySQL-compatible wire protocol server"

[dependencies]
elyra-core.workspace = true
elyra-engine.workspace = true
elyra-storage.workspace = true
elyra-wire.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
sha1 = "0.10"
getrandom = "0.4"
futures-util = "0.3"
serde.workspace = true
bincode.workspace = true
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
rsa = "0.9"
rand = "0.10"

[dev-dependencies]
mysql_async = { version = "0.37", default-features = false, features = ["minimal"] }
tokio = { workspace = true }
