[package]
name = "elyra-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ElyraSQL single-file ACID storage engine"

[dependencies]
elyra-core.workspace = true
redb.workspace = true
serde = { workspace = true, features = ["derive"] }
bincode.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
