[package]
name = "elyra-vector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ElyraSQL native vector search (ANN)"

[dependencies]
elyra-core.workspace = true
# Portable SIMD (SSE/AVX on x86, NEON on ARM) for the distance kernels.
wide = "0.7"
